erDiagram
    USERS {
        int UserId PK
        string Username UK
        string PasswordHash
        string FullName
        string Role
        bool IsActive
        datetime CreatedAt
        datetime UpdatedAt
    }

    AREAS {
        int AreaId PK
        string AreaName UK
        int DisplayOrder
        bool IsActive
        datetime CreatedAt
        datetime UpdatedAt
    }

    DINING_TABLES {
        int TableId PK
        string TableName
        int AreaId FK "nullable"
        string Area "legacy/display area"
        string QrToken UK
        string Status "Available, Occupied, WaitingPayment"
        bool IsActive
        int DisplayOrder
        datetime CreatedAt
        datetime UpdatedAt
    }

    TABLE_SESSIONS {
        int TableSessionId PK
        int TableId FK
        datetime StartedAt
        datetime EndedAt
        string Status "Browsing, Open, WaitingPayment, Closed, Cancelled"
        int OpenedBy FK "nullable"
        int ClosedBy FK "nullable"
    }

    TABLE_SESSION_CUSTOMERS {
        int SessionCustomerId PK
        int TableSessionId FK
        string ClientToken
        string DisplayName
        datetime CreatedAt
    }

    USERS ||--o{ TABLE_SESSIONS : opens
    USERS ||--o{ TABLE_SESSIONS : closes
    AREAS ||--o{ DINING_TABLES : contains
    DINING_TABLES ||--o{ TABLE_SESSIONS : has
    TABLE_SESSIONS ||--o{ TABLE_SESSION_CUSTOMERS : has
